2015-02-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* hi-lock.el (hi-lock-unface-buffer): Don't call
	font-lock-remove-keywords if not needed (bug#19737).

2015-02-11  Artur Malabarba  <bruce.connor.am@gmail.com>

	* emacs-lisp/package.el (package-install): Invert the second
	argument, for better backwards compatibility.
	(package-install-button-action, package-reinstall)
	(package-menu-execute): Account for the change.

2015-02-11  Nicolas Petton <nicolas@petton.fr>

	* emacs-lisp/seq.el (seq-reverse): Add a backward-compatible
	version of seq-reverse that works on sequences in Emacs 24.
	Bump seq.el version to 1.2.

2015-02-11  Artur Malabarba  <bruce.connor.am@gmail.com>

	* emacs-lisp/package.el (package--incompatible-p): New function.
	Return non-nil if PKG has no chance of being installable.
	(package--emacs-version-list): New variable.
	(describe-package-1, package-desc-status)
	(package-menu--print-info, package-menu--status-predicate):
	Account for the "incompat" status.

2015-02-11  Martin Rudalics  <rudalics@gmx.at>

	* frame.el (toggle-frame-maximized, toggle-frame-fullscreen):
	Rename frame parameter `maximized' to `fullscreen-restore'.
	Restore fullwidth/-height after fullboth state.  Update doc-strings.

2015-02-11  Lars Ingebrigtsen  <larsi@gnus.org>

	* net/shr.el (shr-insert): Make sure the space inserted has the
	right font (for width).
	(shr-fill-line): Preserve background colours when indenting/folding.
	(shr-ensure-paragraph): Don't insert a new paragraph as the first
	item in a <li>.

2015-02-10  Lars Ingebrigtsen  <larsi@gnus.org>

	* net/shr.el (shr-use-fonts): New variable.
	(shr-fill-text): Rename from "fold".
	(shr-pixel-column, shr-pixel-region, shr-string-pixel-width):
	New functions.
	(shr-insert): Just insert, don't fill the text.  Filling is now
	done afterwards per display unit.
	(shr-fill-lines, shr-fill-line): New functions to fill text on a
	per-unit base.
	(shr-find-fill-point): Take a "beginning" parameter.